--- a/app/views/students/syllabus/components/_pass_fail.haml
+++ b/app/views/students/syllabus/components/_pass_fail.haml
@@ -1,4 +1,4 @@
-- if presenter.grade_visible?(assignment)
+- if GradeProctor.new(presenter.grade_for(assignment)).viewable?
   .bold
     - if presenter.grade_for(assignment).pass_fail_status
       = term_for(presenter.grade_for(assignment).pass_fail_status)
