--- a/app/assets/stylesheets/_student_subnav.sass
+++ b/app/assets/stylesheets/_student_subnav.sass
@@ -64,11 +64,11 @@ li a.notification-right
   .student .offscreen-sidebar
     text-transform: capitalize
     li
-      border-bottom: 1px solid $color-blue-2
-      color: $color-white
-      background-color: $color-blue-1
+      border-bottom: 1px solid #ddd
+      color: $color-grey-2
+      background-color: $color-grey-6
       font-weight: 300
       padding: .65rem
       display: block
     li a
-      color: $color-white
+      color: $color-grey-2
