standardized left mobile menu styles for both student and instructor, added icons for student mobile nav

--- a/app/assets/stylesheets/_buttons_and_icons.sass
+++ b/app/assets/stylesheets/_buttons_and_icons.sass
@@ -122,6 +122,7 @@ tbody
   padding: 2px 8px 0 7px
   text-align: center
   float: right
+  margin-right: .25em
 
 .flagged-user-icon > .fa-flag
   color: $color-grey-8
