--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -316,12 +316,13 @@ ul.subnav.logged-out
 
   .layout-left-flyout
     width: 250px
-
+    li
+      padding: .2em
     li, li a
-      color: $color-white
-      height: 1.5rem
+      color: $color-grey-2
       text-transform: capitalize
       font-size: 1rem
+      font-weight: 300
       &.active
         background-color: $color-blue-3
         color: $color-white
@@ -330,7 +331,7 @@ ul.subnav.logged-out
         text-decoration: none
 
     h5
-      color: $color-yellow-1
+      color: $color-blue-3
       text-transform: uppercase
       font-size: 1rem
       padding: .25rem 0 .25rem .5rem
@@ -338,15 +339,14 @@ ul.subnav.logged-out
       font-weight: normal
 
     hr
-      border-bottom-color: $color-blue-4
-      border-top-color: $color-blue-4
+      border-bottom-color: $color-grey-7
+      border-top-color: $color-grey-7
       margin: .5rem 0
 
   li.course-site
     background-color: darken($color-blue-1, 20%)
     width: 16rem
     padding: .5rem .75rem
-    // height: 2.75rem
     font-size: 1rem
 
     a
