--- a/app/views/students/_student_profile_tabs.haml
+++ b/app/views/students/_student_profile_tabs.haml
@@ -6,7 +6,7 @@
       %li{class: ("active" if current_page?(student_course_progress_path(current_student))) }
         = link_to_unless_current "Grading Scheme", student_course_progress_path(current_student)
     %li{class: ("active" if current_page?(student_predictor_path(current_student))) }
-      = link_to_unless_current glyph("level-up") + "Grade Predictor", student_predictor_path(current_student)
+      = link_to_unless_current glyph("tasks") + "Grade Predictor", student_predictor_path(current_student)
     - if current_course.has_badges?
       %li{class: ("active" if current_page?(student_badges_path(current_student))) }
         = link_to_unless_current glyph(:shield) + "#{term_for :badges}", student_badges_path(current_student)
@@ -18,12 +18,12 @@
       %li{class: ("active" if current_page?(dashboard_path)) }
         = link_to_unless_current glyph(:home) + "Timeline", dashboard_path
     %li{class: ("active" if current_page?(syllabus_path)) }
-      = link_to_unless_current glyph(:bars) + "#{term_for :assignments}", syllabus_path
+      = link_to_unless_current glyph('file-text') + "#{term_for :assignments}", syllabus_path
     - if current_course.grade_scheme_elements.present?
       %li{class: ("active" if current_page?(course_progress_path)) }
         = link_to_unless_current glyph("level-up") + "Grading Scheme", course_progress_path
     %li{class: ("active" if current_page?(predictor_path)) }
-      = link_to_unless_current glyph(:sliders) + "Grade Predictor", predictor_path
+      = link_to_unless_current glyph(:tasks) + "Grade Predictor", predictor_path
     - if current_course.has_badges?
       %li{class: ("active" if current_page?(my_badges_path)) }
         = link_to_unless_current glyph(:shield) + "#{term_for :badges}", my_badges_path
