--- a/app/views/students/_student_profile_tabs.haml
+++ b/app/views/students/_student_profile_tabs.haml
@@ -1,4 +1,5 @@
 %ul
+  %h5 Navigation
   - if current_user_is_staff?
     %li{class: ("active" if current_page?(student_path(current_student))) }
       = link_to_unless_current "#{term_for :assignments}", student_path(current_student)
@@ -38,3 +39,4 @@
     - if current_course.has_teams? && current_course.teams_visible?
       %li{class: ("active" if current_page?(my_team_path)) }
         = link_to_unless_current glyph(:users) + "#{term_for :teams}", my_team_path
+    %hr
