removed hover state from active li

--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -325,6 +325,7 @@ ul.subnav.logged-out
       &.active
         background-color: $color-blue-3
         color: $color-white
+    a
       &:hover
         color: $color-blue-3
         text-decoration: none
