hid hr and h5 on desktop view

--- a/app/assets/stylesheets/_student_subnav.sass
+++ b/app/assets/stylesheets/_student_subnav.sass
@@ -65,4 +65,8 @@ li a.notification-right
 
 @media (min-width: $media-small-max)
   i
-    display: inline
+    display: none
+  hr
+    display: none
+  h5
+    display: none
