--- a/app/assets/stylesheets/_student_subnav.sass
+++ b/app/assets/stylesheets/_student_subnav.sass
@@ -48,6 +48,9 @@
 
     li a:hover, li:hover a
       color: $color-black
+    
+    h5, hr
+      display: none
 
 /* Setting the active tab and hover color */
 .navbar-nav li.active, .sub-nav .navbar-nav li:hover
@@ -65,8 +68,4 @@ li a.notification-right
 
 @media (min-width: $media-small-max)
   i
-    display: none
-  hr
-    display: none
-  h5
-    display: none
+    display: inline
