add predictor threshold icon and slider

--- a/app/assets/stylesheets/_predictor.sass
+++ b/app/assets/stylesheets/_predictor.sass
@@ -360,6 +360,9 @@ article.predictor-article
       background: $color-blue-1
       border-radius: 1rem
 
+article.predictor-article .ui-slider.below-threshold .ui-slider-range
+  background-color: $color-red-1
+
 /* Binary Switch */
 
 .predictor-binary-switch.badge
