changed style of dividing line between mobile menu sections

--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -339,9 +339,10 @@ ul.subnav.logged-out
       font-weight: normal
 
     hr
-      border-bottom-color: $color-grey-7
-      border-top-color: $color-grey-7
+      border: none
+      border-bottom: 1px dashed $color-grey-5
       margin: .5rem 0
+      width: 100%
 
   li.course-site
     background-color: darken($color-blue-1, 20%)
