--- a/app/assets/stylesheets/_typography.sass
+++ b/app/assets/stylesheets/_typography.sass
@@ -65,8 +65,7 @@ a:hover
   text-decoration: underline
 
 hr
-  border-color: $color-grey-3
-  border-width: 1px 0 0
+  border: 1px solid $color-grey-3
   margin: 1.5rem auto
 
 .label.alert.round
