distribute remove upload link options onto multiple lines

--- a/app/views/submissions/_instructor_show.haml
+++ b/app/views/submissions/_instructor_show.haml
@@ -24,7 +24,9 @@
         - presenter.submission.submission_files.each do |sf|
           %li
             = link_to sf.filename, sf.url, :target => "_blank"
-            = link_to "(Remove)", remove_uploads_path({ :model => "SubmissionFile", assignment_id: presenter.assignment.id, :upload_id => sf.id } )
+            = link_to "(Remove)", remove_uploads_path(model: "SubmissionFile",
+                assignment_id: presenter.assignment.id,
+                upload_id: sf.id)
 
   - if presenter.submission.text_comment?
     %p
