centered badges on desktop and mobile

--- a/app/assets/stylesheets/_badges.sass
+++ b/app/assets/stylesheets/_badges.sass
@@ -9,6 +9,11 @@
   width: 80%
   max-width: 100px
 
+.student-badge-display
+  text-align: center
+  h4
+    text-align: left
+
 /* used on the badge show page for both instructors and students, and grade
 /* standard edit form */
 .badge-card
@@ -20,8 +25,9 @@
   background-color: $color-blue-3
   border-radius: $global-radius
   padding: .5rem
-  float: left
-  margin: 0 .5rem .5rem 0
+  display: inline-block
+  margin: 0 .25rem .25rem 0
+  text-align: left
 
   &.available
     background-color: $color-blue-2
