BadgeProctor and Invisible Level Badges
This PR introduces a BadgeProctor. The badgeProctor takes the `viewable?` functionality of the GradeProctor and adapts it to viewing badges. It does not currently implement the `updatable?` functionality, pending discussion of CanCan and how we want to go about implementing permissions app wide.

It is implemented in this PR to determine the permissions for the new `Invisible Level Badges`. The existing places where the app could use the BadgeProctor to determine viewable permissions are not standardized and have some possible additional requirements, so I have left them for another PR.

One difference from the `GradeProctor` is that the `course` is handled from options params rather than as an optional variable

```
BadgeProctor.new(badge).viewable? some_user, course: some_course
GradeProctor.new(grade).viewable? some_user, some_course
```

I made this change since there is currently no place in the app where we need to determine if the badge is from a particular course, but there are additional factors relevant to the badge.  For instance, I am also currently handling `level` in options:

```
BadgeProctor.new(badge).viewable? some_user

BadgeProctor.new(badge).viewable? some_user, level: some_level
``

This probably warrants a discussion on how to better standardize the calls across Proctors, and I am open to other suggestions here for the BadgeProctor.

Currently invisible badges were filtered out from the rubric design page. This PR allows invisible badges to be attached to Rubric Levels similar to the current visible level badges

  * Allows faculty to attach invisible badges to rubric levels
  * Allows faculty to view any invisible badges on a rubric
  * Allow students to see invisible badges they earned through a rubric
  * Prevents students from seeing earned invisible badges on other unearned levels
  * Normal behavior of earned invisible badges for students on the `my_badges` page

   * Ability to define and expand c

--- a/app/views/grades/components/_criterion_grade_results.haml
+++ b/app/views/grades/components/_criterion_grade_results.haml
@@ -30,10 +30,10 @@
             .level-description= level.description
 
             .row.badge-row
-              - level.level_badges.each_with_index do |badge, index|
-                - if index < 2
+              - level.level_badges.each_with_index do |level_badge, index|
+                - if BadgeProctor.new(level_badge.badge).viewable?(current_user, level: level) && index < 2
                   %span.level-badge-image
-                    %img{:src => badge.badge.icon, width: "30px", height: "30px" }
+                    %img{:src => level_badge.badge.icon, width: "30px", height: "30px" }
               .clear
 
             - if current_user_is_staff? && presenter.viewable_rubric_level_earned?(current_student.id, level.id)
