changes to context menu styling to improve responsiveness

--- a/app/assets/stylesheets/_context_menu.sass
+++ b/app/assets/stylesheets/_context_menu.sass
@@ -1,8 +1,8 @@
 @import color
+@import layout
 
 .context_menu
   background-color: $color-blue-3
-  height: 2rem
   margin: 0
   width: 100%
   opacity: .8
@@ -10,27 +10,29 @@
   ul
     padding: 0
     margin: 0 0 0 1rem
-    position: relative
     
     li
       list-style-type: none
-      margin: 0
-      line-height: 2rem
+      margin-right: -4px
       text-transform: capitalize
-      display: block
-      padding: 0rem .5rem
-      font-size: .8rem
-      float: left
+      display: inline-block
       border-left: 1px solid darken($color-blue-3, 20%)
       color: $color-blue-4
       border-radius: 0 !important
-      border-collapse: collapse
+      &:last-child
+        border-right: 1px solid darken($color-blue-3, 20%)
 
       &:hover
         background-color: $color-blue-1
 
-      & > a
+      & a
         color: $color-white
-
-      & a:hover
         display: block
+        padding: .5rem .4rem
+        font-size: .7rem
+
+@media (max-width: 1200px)
+  .context_menu ul li a
+    font-size: .6rem
+    padding: .5rem .35rem
+
