--- a/app/assets/stylesheets/_features.sass
+++ b/app/assets/stylesheets/_features.sass
@@ -120,33 +120,6 @@
       p
         width: 75%
 
-@media (max-width: $media-small-max)
-  .features
-    .hero-section
-      margin-top: 4rem
-
-    .feature-section
-      height: auto !important
-      display: block
-      padding: 1em
-
-      .image-container
-        margin: 1rem auto !important
-        padding: 0 !important
-
-      img, .text, .center-image
-        margin: 0 auto !important
-        padding: 0 !important
-        height: auto !important
-
-      .half
-        width: 100% !important
-
-      .whole
-        p
-          width: 100%
-          font-size: 1rem
-
 @media (max-width: $media-medium-max)
   .logged-out .features
     .hero-section
@@ -156,7 +129,6 @@
         margin-top: 2rem
         font-size: 1.5rem !important
         margin: 1.5rem auto
-        width: 100%
 
       .promo-text
         font-size: .8rem
@@ -179,3 +151,33 @@
         p
           width: 100%
           font-size: 1rem !important
+
+@media (max-width: $media-small-max)
+  .features
+    .hero-section
+      margin-top: 4rem
+
+      h1
+        width: 100%
+
+    .feature-section
+      height: auto !important
+      display: block
+      padding: 1em
+
+      .image-container
+        margin: 1rem auto !important
+        padding: 0 !important
+
+      img, .text, .center-image
+        margin: 0 auto !important
+        padding: 0 !important
+        height: auto !important
+
+      .half
+        width: 100% !important
+
+      .whole
+        p
+          width: 100%
+          font-size: 1rem
