color revisions to right menu to match look and feel of left menu

--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -299,19 +299,17 @@ ul.subnav.logged-out
     margin: 0
     padding: 0
     font-size: .9rem
-    background: $color-blue-4
+    background: $color-grey-6
     li a
       padding: 5px 10px
       display: block
+      color: $color-grey-3
       &:hover
-        background-color: $color-blue-2
-        color: $color-white
+        color: $color-blue-3
+        text-decoration: none
 
   li.dropdown a.section-title
-    display: block
-    background: $color-blue-1
-    color: $color-white
-    padding: 5px 10px
+    color: $color-blue-3
 
   .layout-left-flyout
     width: 250px
@@ -345,13 +343,12 @@ ul.subnav.logged-out
       width: 100%
 
   li.course-site
-    background-color: darken($color-blue-1, 20%)
-    width: 16rem
+    background-color: $color-blue-1
     padding: .5rem .75rem
     font-size: 1rem
 
     a
-      color: $color-green-2
+      color: $color-blue-4
 
   .navbar .mobile-nav
     padding-top: .5rem
