revise mobile style to target li instead of a

--- a/app/assets/stylesheets/_context_menu.sass
+++ b/app/assets/stylesheets/_context_menu.sass
@@ -32,7 +32,7 @@
         display: block
 
 @media (max-width: 1200px)
-  .context_menu ul li a
+  .context_menu ul li
     font-size: .6rem
     padding: .5rem .35rem
 
