removed links in class info section

--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -300,7 +300,7 @@ ul.subnav.logged-out
     padding: 0
     font-size: .9rem
     background: $color-grey-6
-    li a
+    li
       padding: 5px 10px
       display: block
       color: $color-grey-3
