--- a/app/views/layouts/navigation/_authenticated_nav.haml
+++ b/app/views/layouts/navigation/_authenticated_nav.haml
@@ -8,7 +8,7 @@
   %a.section-title{:href => "#", :title => "Quick information about #{current_course.name}"} 
     Class Info
     %i.fa.fa-caret-down.hidden-sm
-  %ul.subnav#course-info
+  %ul.subnav.hide-for-small#course-info
     = render "layouts/navigation/class_info"
 %li.dropdown       
   %a.section-title{:href => "#", :title => "My account management"} 
