--- a/app/views/pages/um_pilot.haml
+++ b/app/views/pages/um_pilot.haml
@@ -1,16 +1,14 @@
 %section.pilot
+  .student-pilot
+    .pilot-text
+      %h1.bold Are you a student in a GradeCraft course? 
+      %p 
+        Please try logging in via 
+        %a{ :href => 'https://umich.instructure.com/', :title => ""} Canvas  
+        by clicking the GradeCraft link in the left sidebar or reach out to your instructor. 
   .instructor-pilot
     .pilot-text
       %h1.bold Are you an instructor at UM interested in using GradeCraft? 
       %p 
         %a{ :href => 'https://docs.google.com/a/umich.edu/forms/d/1AzqyS-vDUxvyohO_5mYOYRYqvJkA9_o74_ZPokRVwew/viewform?embedded=true', :title => "" } Tell us a little bit about your course
         and we'll be in touch shortly to get you set up.
-  .student-pilot
-    .pilot-text
-      %h1.bold Are you a student in a GradeCraft course? 
-      %p 
-        Please try logging in via 
-        %a{ :href => 'https://umich.instructure.com/', :title => ""} Canvas 
-        or 
-        %a{ :href => 'https://ctools.umich.edu/', :title => ""} CTools 
-        or reach out to your instructor. 
