--- a/app/views/info/ungraded_submissions.html.haml
+++ b/app/views/info/ungraded_submissions.html.haml
@@ -21,7 +21,8 @@
       %tr
         %th{scope: "col", :width => "10%"} Assignment
         %th{scope: "col", :width => "7%"} Name
-        %th{"data-dynatable-sorts" => "dueDate"} Date Submitted
+        %th{"data-dynatable-sorts" => "submittedAt"} Date Submitted
+        %th{:style => "display: none"} Submitted At
         %th Comment
         - if current_course.has_teams?
           %th{scope: "col", :width => "15%"}= "#{term_for :team}"
@@ -37,6 +38,7 @@
             - elsif submission.assignment.has_groups?
               = link_to submission.group.try(:name), group_path(submission.group)
           %td= submission.submitted_at
+          %td{:style => "display: none"}= submission.submitted_at.to_formatted_s(:db) if submission.submitted_at.present?
           %td= raw sanitize_external_links submission.text_comment
           - if current_course.has_teams?
             %td
