--- a/app/assets/stylesheets/_rubrics.sass
+++ b/app/assets/stylesheets/_rubrics.sass
@@ -1,11 +1,15 @@
 @import layout
 @import color
 
+
 #rubric
   textarea
     width: 11.75rem
     border: 0
     height: 65px
+    resize: none
+    background-color: $color-blue-5
+    color: $color-black
 
   input
     height: 2rem
@@ -152,11 +156,24 @@ td.level-td
 
 button.delete
   font-weight: bold
-  background: $color-grey-5
+  background-color: $color-red-1
   position: absolute
-  right: 0
+  right: -4px
+  top: -6px
+  border-radius: 12px
+  width: 24px
+  height: 24px
+
+button.meets-expectations, button.remove-meets-expectations
+  font-weight: bold
+  background: $color-green-1
+  position: absolute
+  left: 0
   top: 0
   border-radius: 0
+
+button.remove-meets-expectations
+  background: $color-green-2
 
   &:hover
     background: $color-red-1
@@ -168,7 +185,9 @@ button.delete
     width: 180px
 
   &.saved
-    background: $color-green-2
+    background: $color-green-1
+    &.level-meets-expectations
+      background-color: $color-green-2
 
   .badge-messages
     clear: right
@@ -180,7 +199,7 @@ button.delete
     overflow: hidden
     padding: 5px
     &:hover
-      background: $color-green-1
+      background: $color-blue-3
 
       .badge-messages
         color: $color-white
@@ -220,7 +239,7 @@ button.delete
 
 .level-badge, .level-badge-image
   font-size: 12px
-  color: white
+  color: $color-white
   padding: 0 0 0 4px
   margin-bottom: 2px
   position: relative
@@ -259,7 +278,7 @@ button.delete
     right: 0
     background: $color-blue-2
     padding: .5rem
-    color: white
+    color: $color-white
     margin-top: 0
     margin-right: 0px
 
@@ -293,7 +312,7 @@ button.delete
   padding: 0
   border-radius: $global-radius
 
-#grade-rubric-table, #rubric-results-table
+#rubric-table
   td
     vertical-align: top
     text-align: left
@@ -324,7 +343,14 @@ button.delete
   td.level-level
     border: 1px solid $color-grey-6
 
+  .level.meets-expectations
+    background-color: $color-grey-6
+    border: 1px solid $color-grey-7
+
   .level.selected
+    background-color: $color-green-1
+
+  .level.selected.meets-expectations
     background-color: $color-green-2
 
   .level-badge-image img
@@ -356,6 +382,8 @@ button.delete
       margin: 0
       width: 100%
       height: 105%
+      resize: none
+      background: $color-red-1
 
   h4.notice
     color: $color-green-2
