--- a/app/views/assignments/_show_student.haml
+++ b/app/views/assignments/_show_student.haml
@@ -30,8 +30,8 @@
         = render partial: "assignments/description_and_downloads", locals: { presenter: presenter }
       - if presenter.show_rubric_preview? current_student
         #tab2
-          = render partial: "assignments/rubric_preview", locals: { presenter: presenter }
-      - if presenter.has_submission_for? current_student
+          = render partial: "rubrics/components/rubric_table", locals: { presenter: presenter, include_grade_info: false }
+      - if presenter.has_submission_for?(current_student)
         #tab3
           = render partial: "submissions/submission_content",
               locals: { presenter: ShowSubmissionPresenter.new(id: presenter.submission_for_assignment(current_student).id,
