--- a/app/views/rubrics/components/_rubric_table.haml
+++ b/app/views/rubrics/components/_rubric_table.haml
@@ -12,4 +12,4 @@
           Comments
 
   %tbody
-    = render partial: "rubrics/components/criteria", locals: { presenter: presenter, include_grade_info: include_grade_info }
+    = render "rubrics/components/criteria", presenter: presenter, include_grade_info: include_grade_info
