--- a/app/views/rubrics/components/_criteria.haml
+++ b/app/views/rubrics/components/_criteria.haml
@@ -7,7 +7,7 @@
       .criterion-description= criterion.wrapped_description(40).html_safe
 
     - criterion.levels.ordered.each do |level|
-      = render partial: "rubrics/components/level", locals: { presenter: presenter, level: level, include_grade_info: include_grade_info }
+      = render "rubrics/components/level", presenter: presenter, level: level, include_grade_info: include_grade_info
 
     - if criterion.levels.size < presenter.rubric_max_level_count
       %td.filler(colspan="#{presenter.rubric_max_level_count - criterion.levels.size}")
