--- a/app/views/rubrics/components/_level.haml
+++ b/app/views/rubrics/components/_level.haml
@@ -1,6 +1,6 @@
 %td.level.level-level{:class => ("meets-expectations" if level.meets_expectations?)}
-  = render partial: "rubrics/components/level_heading", locals: { level: level }
-  = render partial: "rubrics/components/level_badges", locals: { level: level }
+  = render "rubrics/components/level_heading", level: level
+  = render "rubrics/components/level_badges", level: level
 
   - if include_grade_info
-    = render partial: "rubrics/components/level_grade_analysis", locals: { presenter: presenter, level: level }
+    = render "rubrics/components/level_grade_analysis", presenter: presenter, level: level
