added clearfix to current level

--- a/app/assets/stylesheets/_student_dashboard.sass
+++ b/app/assets/stylesheets/_student_dashboard.sass
@@ -38,6 +38,7 @@ img.earned
 .bar_magic.current
   background-color: transparentize($color-green-2, .8)
   padding: 1.5rem 1rem
+  overflow: auto
 
   .left-points
     margin-left: 3em
@@ -53,12 +54,12 @@ p.predictor-description
   background-color: $color-grey-5
   border-radius: 25px
   height: .75rem
+  margin: 1rem 0rem
 
 .striped
   background-image: repeating-linear-gradient(45deg, $color-green-2, $color-green-2 35px, $color-blue-2 35px, $color-blue-2 70px)
   border-radius: 25px
   height: .75rem
-  margin: 1rem 0rem
 
 #levels_per_assignment
   min-height: 200px
