--- a/app/views/students/course_progress.html.haml
+++ b/app/views/students/course_progress.html.haml
@@ -19,7 +19,7 @@
             %span has already been achieved!
             %span=points element.low_range
       - else
-        .progress.bar_magic.current.center.clear
+        .progress.bar_magic.current.center
           %span Your rank:
           %span= element.name
           .striped-bar-container
