--- a/app/views/layouts/_top_bar.haml
+++ b/app/views/layouts/_top_bar.haml
@@ -5,7 +5,15 @@
 
   .offscreen-sidebar
     - if current_user_is_student?
-      .sidebar= render "students/student_profile_tabs"
+      .sidebar
+        %ul.subnav#account-info
+          = render "layouts/navigation/account_info"
+        %hr
+        = render "students/student_profile_tabs"
+        %hr
+        %ul.subnav#course-list
+          = render "layouts/navigation/course_list"
+        %hr
     - elsif current_user_is_staff?
       = render "layouts/navigation/staff_subnav"
 
