removed button icon and rest of haml and styling assoc with right mobile menu

--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -15,7 +15,7 @@ a.site-title
   &.navbar
     width: 100%
 
-.layout-right-flyout, .layout-left-flyout
+.layout-left-flyout
   height: 100%
   position: fixed
   visibility: hidden
@@ -34,9 +34,6 @@ a.site-title
     padding: 0
   a
     display: block
-
-.layout-right-flyout
-  right: 0
 
 .layout-left-flyout
   left: 0
