--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -72,7 +72,7 @@ a.site-title
   position: relative
 
 .nav-flyout-navmask, .nav-flyout-contentmask, .nav-flyout-navmask-left, .nav-flyout-contentmask-left
-  position: absolute
+  position: fixed
   top: 0
   bottom: 0
   left: 0
