--- a/app/views/layouts/navigation/_class_info.haml
+++ b/app/views/layouts/navigation/_class_info.haml
@@ -1,53 +1,24 @@
 - if current_course.instructors_of_record.present?
-  %li
-    %i.fa.fa-flash.fa-fw
-    = "Professor".pluralize(current_course.instructors_of_record.count)
-    = current_course.instructors_of_record.map(&:name).join(", ")
+  %li= glyph(:flash) + "Professor".pluralize(current_course.instructors_of_record.count) + current_course.instructors_of_record.map(&:name).join(", ")
 - if current_course.office.present?
-  %li
-    %i.fa.fa-book.fa-fw
-    ="Office: #{current_course.office}"
+  %li= glyph(:book) + "Office: #{current_course.office}"
 - if current_course.office_hours.present?
-  %li
-    %i.fa.fa-clock-o.fa-fw
-    Office Hours:
-    = auto_link(current_course.office_hours)
+  %li= glyph('clock-o') + "Office Hours: " + auto_link(current_course.office_hours)
 - if current_user_is_student? && current_student.team_leaders(current_course).present?
   - current_student.team_leaders(current_course).each do |team_leader|
-    %li
-      %i.fa.fa-flag.fa-fw
-      = "#{current_course.team_leader_term} #{team_leader.first_name}"
+    %li= glyph(:flag) + "#{current_course.team_leader_term} #{team_leader.first_name}"
 - if current_user_is_student? && current_user.team_for_course(current_course).present?
-  %li
-    %i.fa.fa-trophy.fa-fw
-    = "#{(term_for :team).titleize} #{current_user.team_for_course(current_course).name}"
+  %li= glyph(:trophy) + "#{(term_for :team).titleize} + #{current_user.team_for_course(current_course).name}"
 - if current_course.syllabus.present?
-  %li
-    %a{:href => current_course.syllabus_url }
-      %i.fa.fa-file-text.fa-fw
-      Course Syllabus
+  %li= link_to glyph(:file-text) + "Course Syllabus" , current_course.syllabus_url
 - if current_course.phone.present?
-  %li{:href => "#"}
-    %a
-      %i.fa.fa-phone.fa-fw
-      #{current_course.phone }
+  %li= glyph('phone') + current_course.phone
 - if current_course.class_email.present?
-  %li
-    %a{:href => "mailto:#{current_course.class_email}"}
-      %i.fa.fa-envelope.fa-fw
-      #{current_course.class_email}
+  %li= glyph('envelope') mail_to current_course.class_email, current_course.class_email
 - if current_course.twitter_handle.present?
-  %li
-    %a{:href => "http://www.twitter.com/##{current_course.twitter_handle}"}
-      %i.fa.fa-twitter.fa-fw
-      = "@#{current_course.twitter_handle}"
+  %li= external_link_to glyph(:twitter) +  "@#{current_course.twitter_handle}", "http://www.twitter.com/#{current_course.twitter_handle}"
 - if current_course.twitter_hashtag.present?
-  %li
-    %a{:href => "http://www.twitter.com/##{current_course.twitter_hashtag}"}
-      %i.fa.fa-slack.fa-fw
-      ="#{current_course.twitter_hashtag}"
+  %li= external_link_to glyph(:slack) + "#{current_course.twitter_hashtag}" , 
+  "http://www.twitter.com/##{current_course.twitter_hashtag}"
 - if current_course.meeting_times.present?
-  %li
-    %i.fa.fa-bank.fa-fw
-    = current_course.meeting_times
-    = current_course.location
+  %li= glyph(:bank) + current_course.meeting_times + current_course.location
