--- a/app/views/info/_grades_table.haml
+++ b/app/views/info/_grades_table.haml
@@ -54,7 +54,7 @@
                         %li= link_to glyph(:edit) + "Edit Grade", edit_assignment_grade_path(assignment_id: assignment.id, student_id: student.id), class: "button"
                       - elsif assignment.has_groups?
                         %li= link_to glyph(:eye) + "See Grade", assignment_grade_path(assignment, group_id: group.id), class: 'button'
-                        %li= link_to glyph(:check) + "Edit Grade", group_grade_assignment_path(assignment, group_id: group.id), class: "button"
+                        %li= link_to glyph(:check) + "Edit Grade", grade_assignment_group_path(assignment, group), class: "button"
                 %td.center= check_box_tag "grade_ids[]", grade.id, false, data: { behavior: "toggle-disable-list-command", commands: "[data-behavior='selected-#{grade_type}-grades-command']" }
 
       .submit-buttons
