--- a/app/views/info/ungraded_submissions.html.haml
+++ b/app/views/info/ungraded_submissions.html.haml
@@ -52,4 +52,4 @@
                   %li= link_to glyph(:check) + "Grade", edit_assignment_grade_path(assignment_id: submission.assignment.id, student_id: submission.student.try(:id)), class: "button"
                 - else
                   %li= link_to glyph(:eye) + "See Submission",assignment_submission_path(submission.assignment, id: submission.id), class: "button"
-                  %li= link_to glyph(:check) + "Grade", group_grade_assignment_path(submission.assignment, group_id: submission.group), class: "button"
+                  %li= link_to glyph(:check) + "Grade", grade_assignment_group_path(submission.assignment, submission.group), class: "button"
